--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
         "bgfront",
         "cardbacknumber",
         "cardfront",
-        "cardfrontnumber"
+        "cardfrontnumber",
+        "desktopbackbg",
+        "desktopbg"
     ]
 }
