--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Applessed",
         "backcard",
         "backcardtxt",
+        "Backprops",
         "bgback",
         "bgbgcard",
         "bgcard",
